[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Quan Le <leminhquan310@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13.0"
openai = "^1.37.1"
fastapi = "^0.111.1"
starlette = "0.37.2"
langchain = "^0.2.11"
huggingface-hub = "^0.24.2"
langchain-huggingface = "^0.0.3"
langchain-qdrant = "^0.1.3"
langchain-community = "^0.2.10"
pypdf = "^4.3.1"
langchain-text-splitters = "^0.2.2"
tiktoken = "^0.7.0"
pymupdf = "^1.24.9"
qdrant-client = "^1.10.1"
fastembed = "^0.3.4"
pdfminer-six = "^20240706"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
