[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Quan Le <leminhquan310@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13.0"
openai = "^1.37.1"
fastapi = "^0.111.1"
starlette = "0.37.2"
langchain = "^0.2.11"
huggingface-hub = "^0.24.2"
langchain-huggingface = "^0.0.3"
langchain-qdrant = "^0.1.3"
langchain-community = "^0.2.10"
pypdf = "^4.3.1"
langchain-text-splitters = "^0.2.2"
tiktoken = "^0.7.0"
pymupdf = "^1.24.9"
qdrant-client = "^1.10.1"
fastembed = "^0.3.4"
pdfminer-six = "^20240706"
xmltodict = "^0.13.0"
wikipedia = "^1.4.0"
tavily-python = "^0.3.5"
sentencepiece = "^0.2.0"
ipykernel = "^6.29.5"
langgraph = "^0.1.19"
langchain-google-genai = "^1.0.8"
python-multipart = "^0.0.9"
pillow = "^10.4.0"
unstructured = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
