[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Quan Le <leminhquan310@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13.0"
openai = "^1.42.0"
fastapi = "^0.112.1"
starlette = "^0.38.2"
langchain = "^0.2.14"
huggingface-hub = "^0.24.2"
langchain-huggingface = "^0.0.3"
langchain-qdrant = "^0.1.3"
langchain-community = "^0.2.12"
langchain-text-splitters = "^0.2.2"
tiktoken = "^0.7.0"
pymupdf = "^1.24.9"
qdrant-client = "^1.10.1"
xmltodict = "^0.13.0"
wikipedia = "^1.4.0"
tavily-python = "^0.3.5"
sentencepiece = "^0.2.0"
ipykernel = "^6.29.5"
langgraph = "^0.2.12"
langchain-google-genai = "^1.0.10"
python-multipart = "^0.0.9"
pillow = "^10.4.0"
unstructured = "^0.15.0"
markdown = "^3.6"
langchain-openai = "^0.1.22"
python-dotenv = "^1.0.1"
pymupdf4llm = "^0.0.12"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
